fix OpenShiftLoggingHandler per line to avoid out of memory exceptions